cpp-library: add mylibtest package to flake

--- a/cpp-library/CMakeLists.txt
+++ b/cpp-library/CMakeLists.txt
@@ -22,7 +22,7 @@ include(CMakePackageConfigHelpers)      # Helper to create relocatable packages
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake") # Make our cmake scripts available
 
 # Define option to enable unit testing
-option(ENABLE_TESTING "Should unit tests be compiled." ON)
+option(ENABLE_TESTING "Should unit tests be compiled." OFF)
 
 # Static build
 option(ENABLE_STATIC "Enable statically compiled libraries" ON)
